# pkg/dependencymodels/oauth.gen.go
@@ -1,6 +1,5 @@
-// Package dependencymodels provides primitives to interact with the openapi HTTP API.
-//
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+
 package dependencymodels
 
 import (
@@ -48,7 +47,7 @@ type OAuthTokenResponse struct {
 	IdToken      *string `json:"id_token,omitempty"`
 	RefreshToken *string `json:"refresh_token,omitempty"`
 
-	// RefreshTokenExpiresIn Remaining refresh token lifetime in seconds, returned for time-based access grants.
+	// RefreshTokenExpiresIn Nonnegative remaining refresh token lifetime in seconds, returned for time-based access grants.
 	RefreshTokenExpiresIn *int                       `json:"refresh_token_expires_in,omitempty"`
 	Scope                 *string                    `json:"scope,omitempty"`
 	TokenType             string                     `json:"token_type"`
